--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <div id="copy">
 		<p class="text-center text-white text-sm">OG Creator <a
-			href="https://www.instagram.com/accounts/login/?next=https%3A%2F%2Fwww.instagram.com%2Fthe_coding_mann%2F%3Figsh%3DMXhlM2phYW15dWRteg%253D%253D&is_from_rle">@Maulik Prajapati</a></p>
+			href="https://www.instagram.com/accounts/login/?next=https%3A%2F%2Fwww.instagram.com%2Fthe_coding_mann%2F%3Figsh%3DMXhlM2phYW15dWRteg%253D%253D&is_from_rle">@The_Coding_Mann</a></p>
 	  </div>
 
 
